--- a/app/src/main/res/layout/records_row.xml
+++ b/app/src/main/res/layout/records_row.xml
@@ -33,6 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/record_type"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:text="Food and Drinks"
                 app:layout_constraintStart_toEndOf="@+id/record_img"
@@ -45,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/acc_name"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:text="Cash"
                 app:layout_constraintTop_toBottomOf="@+id/record_type"
@@ -57,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/payment_type"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:text="Gpay"
                 app:layout_constraintTop_toBottomOf="@+id/acc_name"
@@ -68,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/amount"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:text="amount"
                 app:layout_constraintStart_toEndOf="@+id/record_type"
@@ -80,6 +84,7 @@
                 android:id="@+id/record_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
 
                 android:layout_marginTop="28dp"
                 android:text="date"
