--- a/app/src/main/res/layout/header_lay.xml
+++ b/app/src/main/res/layout/header_lay.xml
@@ -16,9 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:id="@+id/User_name"
         android:text="User name"
         android:textSize="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@color/button_color"/>
 
     <TextView
         android:layout_width="wrap_content"
