Added acount page

--- a/app/src/main/res/layout/header_lay.xml
+++ b/app/src/main/res/layout/header_lay.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
+    android:layout_height="200dp"
     android:gravity="bottom"
-    android:layout_height="200dp">
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="Header image"
         android:padding="20dp"
-        android:src="@mipmap/ic_launcher"
-        android:contentDescription="Header image"/>
+        android:src="@mipmap/ic_launcher" />
+
     <TextView
+        android:id="@+id/User_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:id="@+id/User_name"
         android:text="User name"
+        android:textColor="@color/button_color"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/button_color"/>
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/User_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/User_email"
         android:layout_marginStart="15dp"
         android:text="username@gmail.com"
         android:textSize="20dp"
-        android:textStyle="bold"/>
-
-
+        android:textStyle="bold" />
 
 
 </LinearLayout>
