--- a/app/src/main/res/layout/activity_add_records.xml
+++ b/app/src/main/res/layout/activity_add_records.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,45 +15,45 @@
             android:id="@+id/Add_Records_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_primary" >
+            android:background="@color/design_default_color_primary">
 
             <Button
+                android:id="@+id/cancel_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:id="@+id/cancel_btn"/>
+                android:text="Cancel" />
 
             <Button
+                android:id="@+id/add_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add"
                 android:layout_gravity="end"
                 android:layout_marginEnd="15dp"
-                android:id="@+id/add_btn"/>
+                android:text="Add" />
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="3"
-        android:rowCount="1"
         android:layout_gravity="center"
-        android:padding="16dp">
+        android:columnCount="3"
+        android:padding="16dp"
+        android:rowCount="1">
 
         <Button
             android:id="@+id/income_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Income"/>
+            android:text="Income" />
 
         <Button
             android:id="@+id/expense_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Expense"/>
+            android:text="Expense" />
 
 
         <Button
@@ -62,7 +61,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Transfer"/>
+            android:text="Transfer" />
 
 
     </GridLayout>
@@ -73,15 +72,15 @@
 
         <ImageView
             android:layout_width="100dp"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp" />
 
         <EditText
             android:layout_width="132dp"
             android:layout_height="56dp"
             android:layout_marginStart="160dp"
+            android:inputType="number"
             android:text="amount"
-            android:textSize="30dp"
-            android:inputType="number"/>
+            android:textSize="30dp" />
 
     </LinearLayout>
 
@@ -94,25 +93,25 @@
             android:layout_height="match_parent"
             android:columnCount="2"
             android:rowCount="1">
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="Account"
-                android:textSize="20dp"
-                android:layout_columnWeight="1"/>
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="Category"
-                android:textSize="20dp"
-                android:layout_columnWeight="1"/>
 
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_columnWeight="1"
+                android:text="Account"
+                android:textSize="20dp" />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_columnWeight="1"
+                android:text="Category"
+                android:textSize="20dp" />
 
 
         </GridLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
