--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    android:id="@+id/drawerlayout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".MainActivity"
 
-    tools:context=".MainActivity">
- <include layout="@layout/home_layout"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"/>
- <com.google.android.material.navigation.NavigationView
-     android:layout_width="wrap_content"
-     android:layout_height="match_parent"
-     android:layout_gravity="start"
-     android:fitsSystemWindows="true"
-     android:id="@+id/navigationview"
-     app:headerLayout="@layout/header_lay"
-     app:menu="@menu/navigation_items"
-     />
+    tools:openDrawer="start">
 
+    <include
+        layout="@layout/home_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationview"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_lay"
+        app:menu="@menu/navigation_items" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
