--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -2,28 +2,28 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/background_color">
+    android:background="@color/background_color"
+    android:padding="16dp">
 
     <ImageView
         android:id="@id/imageViewIcon"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/wallet"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:contentDescription="Expense Tracker Icon"/>
+        android:contentDescription="Expense Tracker Icon"
+        android:src="@drawable/wallet" />
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expense Tracker"
-        android:textSize="24sp"
-        android:textColor="@color/title_text_color"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/imageViewIcon"
-        android:layout_marginTop="16dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Expense Tracker"
+        android:textColor="@color/title_text_color"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/editTextFullName"
@@ -31,9 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTitle"
         android:layout_marginTop="16dp"
+        android:background="@drawable/edit_text_background"
         android:hint="Full Name"
-        android:inputType="textPersonName"
-        android:background="@drawable/edit_text_background"/>
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/editTextEmail"
@@ -41,9 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextFullName"
         android:layout_marginTop="16dp"
+        android:background="@drawable/edit_text_background"
         android:hint="Email Address"
-        android:inputType="textEmailAddress"
-        android:background="@drawable/edit_text_background"/>
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/editTextUsername"
@@ -51,9 +51,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="16dp"
+        android:background="@drawable/edit_text_background"
         android:hint="Username"
-        android:inputType="text"
-        android:background="@drawable/edit_text_background"/>
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -61,9 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="16dp"
+        android:background="@drawable/edit_text_background"
         android:hint="Password"
-        android:inputType="textPassword"
-        android:background="@drawable/edit_text_background"/>
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/buttonRegister"
@@ -71,9 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextPassword"
         android:layout_marginTop="24dp"
+        android:background="@color/button_color"
         android:text="Register"
-        android:textColor="@android:color/white"
-        android:background="@color/button_color"/>
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/textViewSignInLink"
@@ -83,7 +83,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Already have an account? "
-        android:textColor="@color/text_secondary_color"/>
+        android:textColor="@color/text_secondary_color" />
 
     <TextView
         android:id="@+id/textViewSignIn"
@@ -91,9 +91,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewSignInLink"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
         android:text="Sign In"
         android:textColor="@color/button_color"
-        android:textStyle="bold"
-        android:layout_marginTop="8dp"/>
+        android:textStyle="bold" />
 
 </RelativeLayout>
