--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -8,18 +8,18 @@
         android:id="@+id/imageViewIcon"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/wallet"
         android:layout_centerInParent="true"
-        android:contentDescription="Expense Tracker Icon"/>
+        android:contentDescription="Expense Tracker Icon"
+        android:src="@drawable/wallet" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expense Tracker"
-        android:textSize="18sp"
-        android:textColor="@color/title_text_color"
         android:layout_below="@id/imageViewIcon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:text="Expense Tracker"
+        android:textColor="@color/title_text_color"
+        android:textSize="18sp" />
 
 </RelativeLayout>
