--- a/app/src/main/res/layout/records_row.xml
+++ b/app/src/main/res/layout/records_row.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
 
 
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -15,89 +14,82 @@
         app:cardBackgroundColor="#A7E6A3"
         app:cardCornerRadius="11dp"
         app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        >
+        app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
+
             <ImageView
+                android:id="@+id/record_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/record_img"
                 android:src="@drawable/baseline_food_bank_24"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/record_type"
-                android:textColor="@color/black"
-                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:text="Food and Drinks"
+                android:textColor="@color/black"
+                android:textSize="20dp"
                 app:layout_constraintStart_toEndOf="@+id/record_img"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/acc_name"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:text="Cash"
-                app:layout_constraintTop_toBottomOf="@+id/record_type"
-                app:layout_constraintStart_toEndOf="@+id/record_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                />
+                android:text="Cash"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintStart_toEndOf="@+id/record_img"
+                app:layout_constraintTop_toBottomOf="@+id/record_type" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/payment_type"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:text="Gpay"
-                app:layout_constraintTop_toBottomOf="@+id/acc_name"
-                app:layout_constraintStart_toEndOf="@+id/record_img"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                />
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/amount"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:text="amount"
-                app:layout_constraintStart_toEndOf="@+id/record_type"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                />
+                android:text="Gpay"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintStart_toEndOf="@+id/record_img"
+                app:layout_constraintTop_toBottomOf="@+id/acc_name" />
+
+            <TextView
+                android:id="@+id/amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="amount"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintStart_toEndOf="@+id/record_type"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/record_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-
                 android:layout_marginTop="28dp"
+
                 android:text="date"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="@+id/amount"
                 app:layout_constraintTop_toBottomOf="@+id/amount" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
 
 
     </androidx.cardview.widget.CardView>
