--- a/app/src/main/res/layout/header_lay.xml
+++ b/app/src/main/res/layout/header_lay.xml
@@ -27,8 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:textColor="#03A9F4"
         android:text="username@gmail.com"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:textStyle="bold" />
 
 
