--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,9 @@
     <!-- Secondary text color -->
     <color name="text_secondary_color">#666666</color>
 
+        <color name="list_item_background_color">#4CAF50</color> \
+        <color name="list_item_text_color">@color/black</color>
+
+
+
 </resources>
