--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -39,77 +39,63 @@
                 app:cardUseCompatPadding="true">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/u_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/acc_list"
+                        android:id="@+id/acc_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
-                        android:text="List of accounts: "
+                        android:padding="10dp"
+                        android:text="Account id: "
                         android:textColor="@color/black"
                         android:textSize="20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <Button
-                        android:id="@+id/acc_btn"
-                        android:layout_width="90dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="16dp"
 
-                        android:text="acc"
+                    <TextView
+                        android:id="@+id/username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="68dp"
+                        android:padding="10dp"
+                        android:text="User id:"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+
                         android:textSize="20dp"
-                        app:layout_constraintStart_toEndOf="@+id/acc_list"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/cash"
-                        android:layout_width="160dp"
+                        android:id="@+id/aname"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Balance"
-                        android:textAlignment="center"
+                        android:layout_marginStart="56dp"
+                        android:layout_marginTop="16dp"
+                        android:text="TextView"
+                        android:textSize="30dp"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/acc_name"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        app:layout_constraintTop_toBottomOf="@+id/acc_list" />
-
-                    <Button
-                        android:id="@+id/Add_acc_btn"
-                        android:layout_width="150dp"
+                    <TextView
+                        android:id="@+id/uname"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="40dp"
-                        android:layout_marginTop="20dp"
-                        android:text="Add acc"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toEndOf="@+id/cash"
-                        app:layout_constraintTop_toBottomOf="@+id/acc_btn" />
+                        android:layout_marginStart="76dp"
+                        android:layout_marginTop="48dp"
+                        android:text="TextView"
+                        android:textSize="30dp"
+                        android:textColor="@color/black"
+                        app:layout_constraintStart_toEndOf="@+id/username"
+                        app:layout_constraintTop_toBottomOf="@+id/aname" />
 
-                    <Button
-                        android:id="@+id/Acc_detail_btn"
-                        android:layout_width="180dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:text="Acc detail"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cash" />
 
-                    <Button
-                        android:id="@+id/Records"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="30dp"
-                        android:text="records"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toEndOf="@id/Acc_detail_btn"
-                        app:layout_constraintTop_toBottomOf="@+id/cash" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -145,26 +131,7 @@
                 app:cardBackgroundColor="#A7E6A3"
                 app:cardCornerRadius="11dp"
                 app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="upcoming planned payments"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
+                app:cardUseCompatPadding="true"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="380dp"
@@ -172,26 +139,7 @@
                 app:cardBackgroundColor="#A7E6A3"
                 app:cardCornerRadius="11dp"
                 app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="Last records overview"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
+                app:cardUseCompatPadding="true"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="380dp"
@@ -199,26 +147,7 @@
                 app:cardBackgroundColor="#A7E6A3"
                 app:cardCornerRadius="11dp"
                 app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="20dp"
-                        android:text="Balance forecasting"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.cardview.widget.CardView>
+                app:cardUseCompatPadding="true"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="380dp"
@@ -226,44 +155,7 @@
                 app:cardBackgroundColor="#A7E6A3"
                 app:cardCornerRadius="11dp"
                 app:cardElevation="5dp"
-                app:cardUseCompatPadding="true">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/B_and_G_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="20dp"
-                        android:text="Budgets and Goals"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Button
-                        android:id="@+id/Budget_btn"
-                        android:layout_width="250dp"
-                        android:layout_height="60dp"
-                        android:text="Create Budget"
-                        android:textSize="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/B_and_G_btn" />
-
-                    <Button
-                        android:layout_width="250dp"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Create Goal"
-                        android:textSize="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/Budget_btn" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+                app:cardUseCompatPadding="true"/>
         </LinearLayout>
 
     </ScrollView>
