--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
- <item
+
+    <item
+        android:id="@+id/account_item"
+        android:title="Accounts"
+        />
+    <item
      android:id="@+id/records_item"
      android:title="Records"
      android:icon="@drawable/baseline_add_24"
      />
     <item
         android:id="@+id/goal_item"
-        android:title="goals"
+        android:title="Goal"
         />
+
     <item
         android:id="@+id/budget_item"
         android:title="budget"
+        />
+    <item
+        android:id="@+id/login_item"
+        android:title="Login"
         />
 </menu>
