--- a/app/src/main/res/layout/activity_add_records.xml
+++ b/app/src/main/res/layout/activity_add_records.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical"
-    tools:context=".Add_Records"
-    android:background="#fff">
+    tools:context=".Add_Records">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -16,8 +16,24 @@
             android:id="@+id/Add_Records_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/add_record_toolbar_color"/>
+            android:background="@color/add_record_toolbar_color">
 
+            <ImageView
+                android:id="@+id/close_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:src="@drawable/close" />
+
+            <ImageView
+                android:id="@+id/check_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="15dp"
+                android:src="@drawable/check" />
+
+        </androidx.appcompat.widget.Toolbar>
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -35,14 +51,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Income" />
+            android:text="Income"
+            />
 
         <Button
             android:id="@+id/expense_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Expense" />
+            android:text="Expense"
+           />
 
 
         <Button
@@ -50,57 +68,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
-            android:text="Transfer" />
+            android:text="Transfer"
+           />
 
 
     </GridLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="50dp" />
-
-        <EditText
-            android:layout_width="132dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="160dp"
-            android:inputType="number"
-            android:text="amount"
-            android:textSize="30dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp">
-
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnCount="2"
-            android:rowCount="1">
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_columnWeight="1"
-                android:text="Account"
-                android:textSize="20dp" />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_columnWeight="1"
-                android:text="Category"
-                android:textSize="20dp" />
-
-
-        </GridLayout>
-
-    </LinearLayout>
 
 
 </LinearLayout>
