--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,10 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Moneymind" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+
+
     </style>
 
-    <style name="Theme.Moneymind" parent="Base.Theme.Moneymind" />
+    <style name="Theme.Moneymind" parent="Base.Theme.Moneymind" >
 
+        <item name="colorPrimary">@color/activity_background</item>
 
+    </style>
+
+    <style name="customindicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+
+        <item name="android:color">@color/dark_green</item>
+
+    </style>
 </resources>
