completed with basic UI

--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -7,7 +7,7 @@
     android:background="#fff"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Account_page">
+    tools:context=".views.activities.Account_page">
 
     <TextView
         android:layout_width="wrap_content"
