--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Records">
+    tools:context=".RecyclerRecordsAdapter$Records">
 
 
     <com.google.android.material.appbar.AppBarLayout
