--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -42,8 +42,8 @@
         android:id="@+id/select_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello user"
-        android:textColor="@color/popup_menu_background_color"
+        android:text="Hello user 👋"
+        android:textColor="@color/activity_background"
         android:textSize="25sp"
         android:textStyle="bold"
         android:translationY="-100dp" />
