--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -28,7 +28,7 @@
     <EditText
         android:id="@+id/editTextFullName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/textViewTitle"
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
@@ -39,7 +39,7 @@
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/editTextFullName"
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
@@ -50,7 +50,7 @@
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
@@ -61,7 +61,7 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="16dp"
         android:background="@drawable/edit_text_background"
