--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -18,8 +18,9 @@
         android:layout_below="@id/imageViewIcon"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="Expense Tracker"
+        android:text="MONEYMIND"
+        android:textStyle="bold"
         android:textColor="@color/title_text_color"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
